--- a/stow_packages/git/.gitconfig
+++ b/stow_packages/git/.gitconfig
@@ -26,6 +26,12 @@
     new = green                 # additions
     whitespace = red reverse
 
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+
 [color "status"]
     # Changed files are yellow.
     # Staged files are green.
@@ -60,6 +66,9 @@
 
     # Enable the filesystem cache (for git bash | windows)
     fscache = true
+
+    #Configuring git to use diff-so-fancy
+	pager = diff-so-fancy | less --tabs=4 -RFX
 
 [diff]
     # Use more time to create better diffs.
@@ -152,9 +161,8 @@
 [log]
     decorate = short
 
-
 [pager]
     color = true
-    diff = diff-highlight | less
-    log = diff-highlight | less
-    show = diff-highlight | less
+    diff = diff-so-fancy | less --tabs=1,5 -RFX
+    log = diff-so-fancy | less --tabs=1,5 -RFX
+    show = diff-so-fancy | less --tabs=1,5 -RFX
