--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,47 @@
 {
-    "python.pythonPath": "/home/gbiamby/anaconda3/bin/python"
+    "python.pythonPath": "/home/gbiamby/anaconda3/bin/python",
+    "diffEditor.ignoreTrimWhitespace": false,
+    "editor.cursorSmoothCaretAnimation": true,
+    "editor.renderControlCharacters": true,
+    "editor.renderWhitespace": "all",
+    "editor.wordWrapColumn": 100,
+    "files.exclude": {
+        "**/*.pyc": true,
+        "**/.DS_Store": true,
+        "**/.git": true,
+        "**/.pytest_cache": true,
+        "**/XDG_CACHE_HOME": true,
+        "**/__pycache__/**": true
+    },
+    "jupyter.allowUnauthorizedRemoteConnection": true,
+    "python.analysis.extraPaths": [
+        "./mal/mal"
+    ],
+    "python.envFile": "${workspaceFolder}/.env",
+    "python.formatting.blackArgs": [
+        "--line-length",
+        "100"
+    ],
+    "python.formatting.provider": "black",
+    "python.linting.enabled": true,
+    "python.linting.flake8Args": [
+        "--verbose"
+    ],
+    "python.linting.flake8Enabled": true,
+    "python.linting.pylintArgs": [
+        "--generated-members=numpy.* ,torch.* ,cv2.* , cv.*",
+        "--rcfile=${workspaceFolder}/code/.pylintrc"
+    ],
+    "python.linting.pylintEnabled": true,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        ".",
+        "-p",
+        "test_*.py"
+    ],
+    "python.testing.unittestEnabled": false,
+    "rewrap.wrappingColumn": 100,
 }
