--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -326,5 +326,8 @@
         }
     ],
     "explorer.autoReveal": false,
-    "git.autofetch": true
+    "git.autofetch": true,
+    "[dockerfile]": {
+        "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+    }
 }
