--- a/stow_packages/tmux/.tmux.conf
+++ b/stow_packages/tmux/.tmux.conf
@@ -78,10 +78,10 @@ set -g pane-active-border-style 'bg=colour0 fg=colour5'
 set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=colour18 fg=colour4'
-set -g status-left ''
+set -g status-left '#[fg=green]host:#H, sess:#S#[default] %m/%d/%y win:#I pane:#P '
 set -g status-right '#[fg=colour18,bg=colour4] %d/%m #[fg=colour4,bg=colour18] %H:%M:%S '
 set -g status-right-length 50
-set -g status-left-length 20
+set -g status-left-length 55
 
 setw -g window-status-current-style 'fg=colour1 bg=colour19 bold'
 setw -g window-status-current-format ' #I #[fg=colour7]#W#[fg=colour8]#F '
