Add slack install (snap)

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -14,6 +14,7 @@
         "GPU's",
         "Girshick",
         "Giscard",
+        "Giscard's",
         "IESDS",
         "Jupyter",
         "LMDB",
@@ -24,6 +25,7 @@
         "TYPECHECK",
         "VAALPP",
         "VAALPPNOVAE",
+        "Vandelay",
         "WLOG",
         "XVIEWCOCO",
         "Xview",
@@ -38,6 +40,7 @@
         "bboxes",
         "betavae",
         "biamby",
+        "blackbox",
         "bufsize",
         "bvaeloc",
         "celeba",
@@ -52,6 +55,7 @@
         "ctdet",
         "cuda",
         "cudnn",
+        "datapoints",
         "datasets",
         "dconfig",
         "deque",
@@ -82,12 +86,14 @@
         "loeffler",
         "matplotlib",
         "maxormin",
+        "microservice",
         "minival",
         "mkdir",
         "mobilenetv",
         "nargs",
         "ndarray",
         "nepochs",
+        "neuropaths",
         "noqa",
         "numpy",
         "opencv",
@@ -116,6 +122,8 @@
         "serializable",
         "shutil",
         "submodule",
+        "subscore",
+        "subscores",
         "timeit",
         "tobytes",
         "todo's",
@@ -237,7 +245,9 @@
         "FIXME",
         "TODO",
         "XXX",
-        "DEBUG"
+        "DEBUG",
+        "[ ]",
+        "[x]"
     ],
     "todo-tree.tree.showScanModeButton": false,
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
@@ -336,5 +346,7 @@
         "editor.defaultFormatter": "ms-azuretools.vscode-docker"
     },
     "jupyter.maxOutputSize": 1500,
-    "window.zoomLevel": 1
+    "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^\\s*(-|\\d+.))\\s*($TAGS)",
+    "window.zoomLevel": 1,
+    "jupyter.askForKernelRestart": false
 }
