Update pull.rebase=merges instead of =preserve, to fix warning message every time i do git pull

--- a/stow_packages/git/.gitconfig
+++ b/stow_packages/git/.gitconfig
@@ -103,7 +103,7 @@
 	user = GiscardBiamby
 
 [pull]
-	rebase = preserve
+	rebase = merges
 
 [rebase]
     # Use --autostash when running git pull --rebase and when rebasing interactively
