Update vscode keybindings, extensions

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -9,23 +9,31 @@
     "autoDocstring.startOnNewLine": true,
     "breadcrumbs.enabled": true,
     "cSpell.userWords": [
+        "BAIR",
+        "Barreleye",
         "Conv",
+        "Cyprien",
         "Dets",
+        "Fanalyze",
         "GPU's",
         "Girshick",
         "Giscard",
         "Giscard's",
+        "Gitlab",
         "IESDS",
         "Jupyter",
         "LMDB",
+        "MIZZOU",
         "PYTHONPATH",
         "Popen",
         "Posix",
+        "Psychographics",
         "Pylance",
         "TYPECHECK",
         "VAALPP",
         "VAALPPNOVAE",
         "Vandelay",
+        "Vanter",
         "WLOG",
         "XVIEWCOCO",
         "Xview",
@@ -47,6 +55,7 @@
         "cifar",
         "cmdline",
         "cmds",
+        "cocobetter",
         "cocoeval",
         "coldstart",
         "conda",
@@ -55,9 +64,11 @@
         "ctdet",
         "cuda",
         "cudnn",
+        "datacenter",
         "datapoints",
         "datasets",
         "dconfig",
+        "dealscore",
         "deque",
         "detectron",
         "discriminatorzdim",
@@ -67,13 +78,16 @@
         "envs",
         "errored",
         "eval",
+        "fsdet",
         "gbiamby",
         "getpgid",
         "gpus",
         "imgs",
         "ints",
+        "invariances",
         "ipynb",
         "iscrowd",
+        "isdecimal",
         "isort",
         "jaccard",
         "kaiming",
@@ -90,6 +104,7 @@
         "minival",
         "mkdir",
         "mobilenetv",
+        "moco",
         "nargs",
         "ndarray",
         "nepochs",
@@ -98,6 +113,7 @@
         "numpy",
         "opencv",
         "optim",
+        "orgs",
         "pdf's",
         "preds",
         "probs",
@@ -148,7 +164,6 @@
         "yolov",
         "zfill"
     ],
-    "diffEditor.ignoreTrimWhitespace": false,
     "editor.copyWithSyntaxHighlighting": false,
     "editor.cursorSmoothCaretAnimation": true,
     "editor.detectIndentation": false,
@@ -347,6 +362,23 @@
     },
     "jupyter.maxOutputSize": 1500,
     "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^\\s*(-|\\d+.))\\s*($TAGS)",
+    "jupyter.askForKernelRestart": false,
+    "python.testing.autoTestDiscoverOnSaveEnabled": false,
+    "python.showStartPage": false,
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "vsicons.dontShowNewVersionMessage": true,
+    "[markdown]": {
+        "editor.defaultFormatter": "quilicicf.markdown-spec-formatter"
+    },
+    "jupyter.alwaysTrustNotebooks": true,
+    "[json]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
     "window.zoomLevel": 1,
-    "jupyter.askForKernelRestart": false
+    "diffEditor.ignoreTrimWhitespace": false
 }
