--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -22,6 +22,7 @@
         "Gitlab",
         "IESDS",
         "Jupyter",
+        "Kubernetes",
         "LMDB",
         "MIZZOU",
         "PYTHONPATH",
@@ -29,6 +30,7 @@
         "Posix",
         "Psychographics",
         "Pylance",
+        "Slurm",
         "TYPECHECK",
         "VAALPP",
         "VAALPPNOVAE",
@@ -153,6 +155,7 @@
         "vaallocb",
         "vaeloc",
         "valminusminival",
+        "venv",
         "vggoriginal",
         "visdrone",
         "vscode's",
@@ -379,6 +382,6 @@
     "[jsonc]": {
         "editor.defaultFormatter": "vscode.json-language-features"
     },
-    "window.zoomLevel": 1,
-    "diffEditor.ignoreTrimWhitespace": false
+    "diffEditor.ignoreTrimWhitespace": false,
+    "window.zoomLevel": 1
 }
