Update vscode dictionary and cSpell language file settings.

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -9,11 +9,14 @@
     "autoDocstring.startOnNewLine": true,
     "breadcrumbs.enabled": true,
     "cSpell.userWords": [
+        "ARPU",
         "BAIR",
         "Barreleye",
+        "CAGR",
         "Conv",
         "Cyprien",
         "Dets",
+        "EBITDA",
         "Fanalyze",
         "GPU's",
         "Girshick",
@@ -22,6 +25,7 @@
         "Gitlab",
         "IESDS",
         "Jupyter",
+        "KPI's",
         "Kubernetes",
         "LMDB",
         "MIZZOU",
@@ -59,6 +63,7 @@
         "cmds",
         "cocobetter",
         "cocoeval",
+        "cofounders",
         "coldstart",
         "conda",
         "convd",
@@ -76,14 +81,18 @@
         "discriminatorzdim",
         "dists",
         "dlib",
+        "dotenv",
         "dtype",
         "envs",
         "errored",
         "eval",
         "fsdet",
         "gbiamby",
+        "getenv",
         "getpgid",
         "gpus",
+        "hackathon",
+        "iloc",
         "imgs",
         "ints",
         "invariances",
@@ -119,6 +128,7 @@
         "pdf's",
         "preds",
         "probs",
+        "puppeteering",
         "pyarrow",
         "pycache",
         "pycocotools",
@@ -226,7 +236,6 @@
     "python.analysis.completeFunctionParens": true,
     "python.analysis.memory.keepLibraryAst": true,
     "python.analysis.symbolsHierarchyDepthLimit": 15,
-    "python.analysis.typeCheckingMode": "basic",
     "python.autoComplete.addBrackets": true,
     "python.dataScience.allowUnauthorizedRemoteConnection": true,
     "python.dataScience.askForKernelRestart": false,
@@ -242,8 +251,7 @@
     ],
     "python.linting.flake8Enabled": true,
     "python.linting.pylintArgs": [
-        "--generated-members=numpy.* ,torch.* ,cv2.* , cv.*",
-        "--rcfile=${workspaceFolder}/h4d/.pylintrc"
+        "--generated-members=numpy.* ,torch.* ,cv2.* , cv.*"
     ],
     "python.linting.pylintEnabled": false,
     "python.pythonPath": "/home/gbiamby/anaconda3/envs/h4d_env/bin/python",
@@ -383,5 +391,52 @@
         "editor.defaultFormatter": "vscode.json-language-features"
     },
     "diffEditor.ignoreTrimWhitespace": false,
+    "githubPullRequests.fileListLayout": "tree",
+    "python.analysis.typeCheckingMode": "basic",
+    "cSpell.language": "en,en-US",
+    "cSpell.enableFiletypes": [
+        "!cpp",
+        "!csharp",
+        "!go",
+        "!handlebars",
+        "!haskell",
+        "!jade",
+        "!less",
+        "!php",
+        "!pug",
+        "!rust",
+        "!scala",
+        "csv",
+        "csv (colon)",
+        "csv (dot)",
+        "csv (double quote)",
+        "csv (hyphen)",
+        "csv (whitespace)",
+        "cython",
+        "django-html",
+        "django-txt",
+        "dockercompose",
+        "dockerfile",
+        "dotenv",
+        "editorconfig",
+        "git-rebase",
+        "gitignore",
+        "hosts",
+        "jinja",
+        "jsx-tags",
+        "jupyter",
+        "log",
+        "makefile",
+        "mako",
+        "matlab",
+        "objective-cpp",
+        "perl",
+        "properties",
+        "r",
+        "search-result",
+        "shellscript",
+        "sql",
+        "ssh_config"
+    ],
     "window.zoomLevel": 1
 }
