Add dictionary words to vscode

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -10,11 +10,15 @@
     "breadcrumbs.enabled": true,
     "cSpell.userWords": [
         "ARPU",
+        "Adelina",
+        "Arslan",
         "BAIR",
         "Barreleye",
+        "Bcrypt",
         "CAGR",
         "Conv",
         "Cyprien",
+        "DARPA",
         "Dets",
         "EBITDA",
         "Fanalyze",
@@ -26,6 +30,7 @@
         "IESDS",
         "Jupyter",
         "KPI's",
+        "Kitware",
         "Kubernetes",
         "LMDB",
         "MIZZOU",
@@ -59,6 +64,7 @@
         "bvaeloc",
         "celeba",
         "cifar",
+        "circleci",
         "cmdline",
         "cmds",
         "cocobetter",
@@ -76,6 +82,7 @@
         "datasets",
         "dconfig",
         "dealscore",
+        "deepfake",
         "deque",
         "detectron",
         "discriminatorzdim",
@@ -83,6 +90,7 @@
         "dlib",
         "dotenv",
         "dtype",
+        "elasaticbeanstalk",
         "envs",
         "errored",
         "eval",
@@ -111,7 +119,9 @@
         "loeffler",
         "matplotlib",
         "maxormin",
+        "medifor",
         "microservice",
+        "minikube",
         "minival",
         "mkdir",
         "mobilenetv",
@@ -147,8 +157,11 @@
         "savez",
         "scipy",
         "scrollback",
+        "semafor",
         "serializable",
+        "setuptools",
         "shutil",
+        "sqlalchemy",
         "submodule",
         "subscore",
         "subscores",
@@ -437,6 +450,5 @@
         "shellscript",
         "sql",
         "ssh_config"
-    ],
-    "window.zoomLevel": 1
+    ]
 }
