Save current settings.json and gitconfig

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -9,20 +9,32 @@
     "autoDocstring.startOnNewLine": true,
     "breadcrumbs.enabled": true,
     "cSpell.userWords": [
+        "AOM's",
+        "API's",
         "ARPU",
         "Adelina",
+        "Amruta",
         "Arslan",
         "BAIR",
         "Barreleye",
         "Bcrypt",
+        "Bjoern's",
+        "Blazek",
         "CAGR",
+        "CAMELCASE",
+        "CVPR",
         "Conv",
         "Cyprien",
         "DARPA",
+        "DARPA’s",
+        "DASHIFIED",
+        "DIDAN",
+        "Delp",
         "Dets",
         "EBITDA",
         "Fanalyze",
         "GPU's",
+        "Gerken",
         "Girshick",
         "Giscard",
         "Giscard's",
@@ -30,41 +42,62 @@
         "IESDS",
         "Jupyter",
         "KPI's",
+        "Kaggle",
+        "Kirill",
         "Kitware",
         "Kubernetes",
         "LMDB",
         "MIZZOU",
+        "Mingyang",
+        "Murt",
+        "Nitesh",
         "PYTHONPATH",
+        "Parallelization",
         "Popen",
         "Posix",
         "Psychographics",
         "Pylance",
+        "RESNETS",
+        "Shilliday",
         "Slurm",
+        "Snopes",
         "TYPECHECK",
+        "UNFOIL",
         "VAALPP",
         "VAALPPNOVAE",
         "Vandelay",
         "Vanter",
         "WLOG",
+        "WORKDIR",
         "XVIEWCOCO",
         "Xview",
+        "Yaser",
+        "Yasir",
         "activelearners",
         "algo",
         "algos",
         "altron",
         "anns",
+        "aomsdk",
         "arange",
+        "artigraph",
+        "astrazeneca",
         "astype",
         "asynch",
+        "autopep",
+        "bbox",
         "bboxes",
         "betavae",
         "biamby",
+        "biontech",
         "blackbox",
         "bufsize",
         "bvaeloc",
         "celeba",
+        "chmod",
         "cifar",
         "circleci",
+        "ckpt",
         "cmdline",
         "cmds",
         "cocobetter",
@@ -74,40 +107,70 @@
         "conda",
         "convd",
         "convolutional",
+        "cookiecutter",
+        "coronavirus",
+        "covid",
         "ctdet",
         "cuda",
         "cudnn",
         "datacenter",
+        "datalake",
         "datapoints",
         "datasets",
         "dconfig",
         "dealscore",
         "deepfake",
+        "deepfakes",
+        "deepfillv",
         "deque",
         "detectron",
         "discriminatorzdim",
         "dists",
         "dlib",
+        "dockerignore",
+        "doctest",
+        "doctests",
         "dotenv",
         "dtype",
+        "ebextensions",
+        "edgeconnect",
         "elasaticbeanstalk",
         "envs",
         "errored",
         "eval",
+        "evigraph",
+        "evigraphs",
+        "facemask",
+        "finetune",
         "fsdet",
+        "fvcore",
         "gbiamby",
+        "geospatial",
         "getenv",
         "getpgid",
         "gpus",
+        "graceluo",
+        "groupby",
         "hackathon",
+        "heatmap",
+        "heatmaps",
         "iloc",
+        "imageio",
         "imgs",
+        "imread",
+        "inpaint",
+        "inpainted",
+        "inpainting",
         "ints",
         "invariances",
+        "iopath",
         "ipynb",
+        "ipython",
         "iscrowd",
         "isdecimal",
         "isort",
+        "iterrows",
+        "itertools",
         "jaccard",
         "kaiming",
         "kcenter",
@@ -115,8 +178,13 @@
         "kfold",
         "killpg",
         "kmeans",
+        "kubectl",
         "laielli",
+        "leaderboard",
         "loeffler",
+        "lvis",
+        "manip",
+        "maskrcnn",
         "matplotlib",
         "maxormin",
         "medifor",
@@ -124,40 +192,64 @@
         "minikube",
         "minival",
         "mkdir",
+        "mmbt",
         "mobilenetv",
         "moco",
+        "moderna",
         "nargs",
         "ndarray",
         "nepochs",
         "neuropaths",
         "noqa",
+        "norecursedirs",
         "numpy",
+        "onnx",
         "opencv",
+        "operationalized",
+        "operationalizing",
         "optim",
         "orgs",
+        "owncloud",
+        "panopticapi",
         "pdf's",
         "preds",
+        "pretrained",
         "probs",
+        "protobuf",
+        "psutil",
         "puppeteering",
         "pyarrow",
         "pycache",
         "pycocotools",
+        "pydocstyle",
+        "pydoctest",
         "pylint",
         "pylintrc",
+        "pypi",
         "pytest",
+        "pythonhosted",
         "pytorch",
         "querry",
         "randn",
         "rcfile",
         "rcnn",
+        "realpath",
         "recents",
+        "recontenxtualization",
+        "recontextualization",
+        "recontextualized",
+        "relu",
+        "repurposing",
+        "resnet",
         "rmtree",
         "roibatch",
         "rpartition",
+        "s",
         "savez",
         "scipy",
         "scrollback",
         "semafor",
+        "semaforprogram",
         "serializable",
         "setuptools",
         "shutil",
@@ -165,27 +257,34 @@
         "submodule",
         "subscore",
         "subscores",
+        "symlink",
+        "termcolor",
         "timeit",
         "tobytes",
         "todo's",
         "tolist",
         "topk",
+        "torchvision",
         "tqdm",
         "trainvae",
         "trainval",
         "trainvalno",
+        "twosix",
         "unchipped",
+        "unsequestered",
         "vaallocb",
         "vaeloc",
         "valminusminival",
         "venv",
         "vggoriginal",
         "visdrone",
+        "visualnews",
         "vscode's",
         "wandb",
         "xrange",
         "xyxy",
         "yacs",
+        "yaml's",
         "yolo",
         "yolov",
         "zfill"
@@ -255,7 +354,7 @@
     "python.dataScience.maxOutputSize": 1200,
     "python.dataScience.sendSelectionToInteractiveWindow": false,
     "python.dataScience.textOutputLimit": 0,
-    "python.diagnostics.sourceMapsEnabled": false,
+    "python.diagnostics.sourceMapsEnabled": true,
     "python.envFile": "${workspaceFolder}/.env",
     "python.formatting.provider": "black",
     "python.jediMemoryLimit": -1,
@@ -326,12 +425,9 @@
     "workbench.settings.openDefaultKeybindings": true,
     "workbench.statusBar.feedback.visible": false,
     "workbench.tree.indent": 15,
-    "workbench.editorAssociations": [
-        {
-            "viewType": "jupyter.notebook.ipynb",
-            "filenamePattern": "*.ipynb"
-        }
-    ],
+    "workbench.editorAssociations": {
+        "*.ipynb": "jupyter-notebook"
+    },
     "workbench.activityBar.visible": true,
     "latex-workshop.message.update.show": false,
     "python.languageServer": "Pylance",
@@ -388,7 +484,6 @@
     "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^\\s*(-|\\d+.))\\s*($TAGS)",
     "jupyter.askForKernelRestart": false,
     "python.testing.autoTestDiscoverOnSaveEnabled": false,
-    "python.showStartPage": false,
     "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
@@ -403,7 +498,6 @@
     "[jsonc]": {
         "editor.defaultFormatter": "vscode.json-language-features"
     },
-    "diffEditor.ignoreTrimWhitespace": false,
     "githubPullRequests.fileListLayout": "tree",
     "python.analysis.typeCheckingMode": "basic",
     "cSpell.language": "en,en-US",
@@ -450,5 +544,22 @@
         "shellscript",
         "sql",
         "ssh_config"
-    ]
+    ],
+    "security.workspace.trust.untrustedFiles": "open",
+    "window.zoomLevel": 1,
+    "python.analysis.diagnosticMode": "workspace",
+    "pylance.insidersChannel": "daily",
+    "markdown.preview.breaks": true,
+    "markdown.preview.typographer": true,
+    "jupyter.allowUnauthorizedRemoteConnection": true,
+    "python.showStartPage": false,
+    "python.defaultInterpreterPath": "/home/gbiamby/anaconda3/envs/h4d_env/bin/python",
+    "redhat.telemetry.enabled": false,
+    "notebook.cellToolbarLocation": {
+        "default": "right",
+        "jupyter-notebook": "left"
+    },
+    "notebook.lineNumbers": "on",
+    "notebook.diff.ignoreOutputs": true,
+    "diffEditor.ignoreTrimWhitespace": false
 }
