--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,13 +1,73 @@
 {
+    "[dockerfile]": {
+        "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+    },
+    "[json]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
     "[latex]": {
         "editor.defaultFormatter": "James-Yu.latex-workshop"
+    },
+    "[markdown]": {
+        "editor.defaultFormatter": "quilicicf.markdown-spec-formatter"
     },
     "[python]": {
         "editor.defaultFormatter": "ms-python.python"
     },
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     "autoDocstring.docstringFormat": "google",
     "autoDocstring.startOnNewLine": true,
     "breadcrumbs.enabled": true,
+    "cSpell.enableFiletypes": [
+        "!cpp",
+        "!csharp",
+        "!go",
+        "!handlebars",
+        "!haskell",
+        "!jade",
+        "!less",
+        "!php",
+        "!pug",
+        "!rust",
+        "!scala",
+        "csv",
+        "csv (colon)",
+        "csv (dot)",
+        "csv (double quote)",
+        "csv (hyphen)",
+        "csv (whitespace)",
+        "cython",
+        "django-html",
+        "django-txt",
+        "dockercompose",
+        "dockerfile",
+        "dotenv",
+        "editorconfig",
+        "git-rebase",
+        "gitignore",
+        "hosts",
+        "jinja",
+        "jsx-tags",
+        "jupyter",
+        "log",
+        "makefile",
+        "mako",
+        "matlab",
+        "objective-cpp",
+        "perl",
+        "properties",
+        "r",
+        "search-result",
+        "shellscript",
+        "sql",
+        "ssh_config"
+    ],
+    "cSpell.language": "en,en-US",
     "cSpell.userWords": [
         "AOM's",
         "API's",
@@ -289,6 +349,7 @@
         "yolov",
         "zfill"
     ],
+    "diffEditor.ignoreTrimWhitespace": false,
     "editor.copyWithSyntaxHighlighting": false,
     "editor.cursorSmoothCaretAnimation": true,
     "editor.detectIndentation": false,
@@ -299,6 +360,7 @@
     "editor.renderWhitespace": "all",
     "editor.suggestSelection": "first",
     "editor.wordWrapColumn": 88,
+    "explorer.autoReveal": false,
     "explorer.confirmDelete": false,
     "files.associations": {
         ".pylintrc": "ini"
@@ -341,98 +403,25 @@
         "/data/**": true,
         "data/**": true
     },
+    "git.autofetch": true,
     "git.suggestSmartCommit": false,
+    "githubPullRequests.fileListLayout": "tree",
+    "jupyter.allowUnauthorizedRemoteConnection": true,
+    "jupyter.alwaysTrustNotebooks": true,
+    "jupyter.askForKernelRestart": false,
+    "jupyter.maxOutputSize": 1500,
     "latex-workshop.intellisense.package.enabled": true,
-    "latex-workshop.view.pdf.viewer": "tab",
-    "materialTheme.accent": "Blue",
-    "python.analysis.completeFunctionParens": true,
-    "python.analysis.memory.keepLibraryAst": true,
-    "python.analysis.symbolsHierarchyDepthLimit": 15,
-    "python.autoComplete.addBrackets": true,
-    "python.dataScience.allowUnauthorizedRemoteConnection": true,
-    "python.dataScience.askForKernelRestart": false,
-    "python.dataScience.maxOutputSize": 1200,
-    "python.dataScience.sendSelectionToInteractiveWindow": false,
-    "python.dataScience.textOutputLimit": 0,
-    "python.diagnostics.sourceMapsEnabled": true,
-    "python.envFile": "${workspaceFolder}/.env",
-    "python.formatting.provider": "black",
-    "python.jediMemoryLimit": -1,
-    "python.linting.flake8Args": [
-        "--verbose"
-    ],
-    "python.linting.flake8Enabled": true,
-    "python.linting.pylintArgs": [
-        "--generated-members=numpy.* ,torch.* ,cv2.* , cv.*"
-    ],
-    "python.linting.pylintEnabled": false,
-    "python.pythonPath": "/home/gbiamby/anaconda3/envs/h4d_env/bin/python",
-    "pythonTestExplorer.testFramework": "unittest",
-    "remote.SSH.showLoginTerminal": true,
-    "rewrap.wrappingColumn": 88,
-    "sync.forceUpload": true,
-    "sync.gist": "84d1a6b5297e9f9834c1c83473a87e07",
-    "terminal.integrated.cursorBlinking": true,
-    "terminal.integrated.experimentalRefreshOnResume": true,
-    "terminal.integrated.inheritEnv": false,
-    "terminal.integrated.scrollback": 100000,
-    "terminal.integrated.shell.linux": "/bin/bash",
-    "todo-tree.general.tags": [
-        "BUG",
-        "HACK",
-        "FIXME",
-        "TODO",
-        "XXX",
-        "DEBUG",
-        "[ ]",
-        "[x]"
-    ],
-    "todo-tree.tree.showScanModeButton": false,
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "window.restoreWindows": "all",
-    "workbench.colorCustomizations": {
-        "activityBar.activeBorder": "#2979FF",
-        "activityBar.background": "#163414",
-        "activityBarBadge.background": "#2979FF",
-        "breadcrumb.activeSelectionForeground": "#2979FF",
-        "editor.findMatchBorder": "#2979FF",
-        "editorSuggestWidget.highlightForeground": "#2979FF",
-        "editorWidget.border": "#2979FF",
-        "editorWidget.resizeBorder": "#2979FF",
-        "list.activeSelectionForeground": "#2979FF",
-        "list.highlightForeground": "#2979FF",
-        "list.inactiveSelectionForeground": "#2979FF",
-        "menu.selectionForeground": "#2979FF",
-        "menubar.selectionForeground": "#2979FF",
-        "notificationLink.foreground": "#2979FF",
-        "panelTitle.activeBorder": "#2979FF",
-        "pickerGroup.foreground": "#2979FF",
-        "progressBar.background": "#2979FF",
-        "scrollbarSlider.activeBackground": "#2979FF50",
-        "selection.background": "#2979FF40",
-        "settings.headerForeground": "#2979FF",
-        "settings.modifiedItemIndicator": "#2979FF",
-        "tab.activeBorder": "#2979FF",
-        "textLink.foreground": "#2979FF",
-        "titleBar.activeBackground": "#1F491D",
-        "titleBar.activeForeground": "#F5FBF5"
-    },
-    "workbench.colorTheme": "Tinacious Design",
-    "workbench.editor.highlightModifiedTabs": true,
-    "workbench.editor.revealIfOpen": true,
-    "workbench.editor.tabSizing": "shrink",
-    "workbench.iconTheme": "vscode-icons",
-    "workbench.settings.openDefaultKeybindings": true,
-    "workbench.statusBar.feedback.visible": false,
-    "workbench.tree.indent": 15,
-    "workbench.editorAssociations": {
-        "*.ipynb": "jupyter-notebook"
-    },
-    "workbench.activityBar.visible": true,
     "latex-workshop.message.update.show": false,
-    "python.languageServer": "Pylance",
-    "workbench.editor.enablePreview": true,
-    "workbench.editor.wrapTabs": true,
+    "latex-workshop.view.pdf.viewer": "tab",
+    "markdown.preview.breaks": true,
+    "markdown.preview.typographer": true,
+    "materialTheme.accent": "Blue",
+    "notebook.cellToolbarLocation": {
+        "default": "right",
+        "jupyter-notebook": "left"
+    },
+    "notebook.diff.ignoreOutputs": true,
+    "notebook.lineNumbers": "on",
     "peacock.favoriteColors": [
         {
             "name": "Angular Red",
@@ -475,91 +464,103 @@
             "value": "#8b6cf1"
         }
     ],
-    "explorer.autoReveal": false,
-    "git.autofetch": true,
-    "[dockerfile]": {
-        "editor.defaultFormatter": "ms-azuretools.vscode-docker"
-    },
-    "jupyter.maxOutputSize": 1500,
-    "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^\\s*(-|\\d+.))\\s*($TAGS)",
-    "jupyter.askForKernelRestart": false,
-    "python.testing.autoTestDiscoverOnSaveEnabled": false,
-    "[typescriptreact]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "vsicons.dontShowNewVersionMessage": true,
-    "[markdown]": {
-        "editor.defaultFormatter": "quilicicf.markdown-spec-formatter"
-    },
-    "jupyter.alwaysTrustNotebooks": true,
-    "[json]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
-    },
-    "[jsonc]": {
-        "editor.defaultFormatter": "vscode.json-language-features"
-    },
-    "githubPullRequests.fileListLayout": "tree",
-    "python.analysis.typeCheckingMode": "basic",
-    "cSpell.language": "en,en-US",
-    "cSpell.enableFiletypes": [
-        "!cpp",
-        "!csharp",
-        "!go",
-        "!handlebars",
-        "!haskell",
-        "!jade",
-        "!less",
-        "!php",
-        "!pug",
-        "!rust",
-        "!scala",
-        "csv",
-        "csv (colon)",
-        "csv (dot)",
-        "csv (double quote)",
-        "csv (hyphen)",
-        "csv (whitespace)",
-        "cython",
-        "django-html",
-        "django-txt",
-        "dockercompose",
-        "dockerfile",
-        "dotenv",
-        "editorconfig",
-        "git-rebase",
-        "gitignore",
-        "hosts",
-        "jinja",
-        "jsx-tags",
-        "jupyter",
-        "log",
-        "makefile",
-        "mako",
-        "matlab",
-        "objective-cpp",
-        "perl",
-        "properties",
-        "r",
-        "search-result",
-        "shellscript",
-        "sql",
-        "ssh_config"
-    ],
-    "security.workspace.trust.untrustedFiles": "open",
-    "window.zoomLevel": 1,
-    "python.analysis.diagnosticMode": "workspace",
     "pylance.insidersChannel": "daily",
-    "markdown.preview.breaks": true,
-    "markdown.preview.typographer": true,
-    "jupyter.allowUnauthorizedRemoteConnection": true,
-    "python.showStartPage": false,
+    "python.analysis.completeFunctionParens": true,
+    "python.analysis.diagnosticMode": "workspace",
+    "python.analysis.memory.keepLibraryAst": true,
+    "python.analysis.symbolsHierarchyDepthLimit": 15,
+    "python.analysis.typeCheckingMode": "basic",
+    "python.autoComplete.addBrackets": true,
+    "python.dataScience.allowUnauthorizedRemoteConnection": true,
+    "python.dataScience.askForKernelRestart": false,
+    "python.dataScience.maxOutputSize": 1200,
+    "python.dataScience.sendSelectionToInteractiveWindow": false,
+    "python.dataScience.textOutputLimit": 0,
     "python.defaultInterpreterPath": "/home/gbiamby/anaconda3/envs/h4d_env/bin/python",
+    "python.diagnostics.sourceMapsEnabled": true,
+    "python.envFile": "${workspaceFolder}/.env",
+    "python.formatting.provider": "black",
+    "python.jediMemoryLimit": -1,
+    "python.languageServer": "Pylance",
+    "python.linting.flake8Args": [
+        "--verbose"
+    ],
+    "python.linting.flake8Enabled": true,
+    "python.linting.pylintArgs": [
+        "--generated-members=numpy.* ,torch.* ,cv2.* , cv.*"
+    ],
+    "python.linting.pylintEnabled": false,
+    "python.pythonPath": "/home/gbiamby/anaconda3/envs/h4d_env/bin/python",
+    "python.showStartPage": false,
+    "python.testing.autoTestDiscoverOnSaveEnabled": false,
+    "pythonTestExplorer.testFramework": "unittest",
     "redhat.telemetry.enabled": false,
-    "notebook.cellToolbarLocation": {
-        "default": "right",
-        "jupyter-notebook": "left"
+    "remote.SSH.showLoginTerminal": true,
+    "rewrap.wrappingColumn": 88,
+    "security.workspace.trust.untrustedFiles": "open",
+    "sync.forceUpload": true,
+    "sync.gist": "84d1a6b5297e9f9834c1c83473a87e07",
+    "terminal.integrated.cursorBlinking": true,
+    "terminal.integrated.experimentalRefreshOnResume": true,
+    "terminal.integrated.inheritEnv": false,
+    "terminal.integrated.scrollback": 100000,
+    "terminal.integrated.shell.linux": "/bin/bash",
+    "todo-tree.general.tags": [
+        "BUG",
+        "HACK",
+        "FIXME",
+        "TODO",
+        "XXX",
+        "DEBUG",
+        "[ ]",
+        "[x]"
+    ],
+    "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^\\s*(-|\\d+.))\\s*($TAGS)",
+    "todo-tree.tree.showScanModeButton": false,
+    "vsicons.dontShowNewVersionMessage": true,
+    "vsicons.presets.jsonOfficial": true,
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "window.restoreWindows": "all",
+    "window.zoomLevel": 1,
+    "workbench.activityBar.visible": true,
+    "workbench.colorCustomizations": {
+        "activityBar.activeBorder": "#2979FF",
+        "activityBar.background": "#163414",
+        "activityBarBadge.background": "#2979FF",
+        "breadcrumb.activeSelectionForeground": "#2979FF",
+        "editor.findMatchBorder": "#2979FF",
+        "editorSuggestWidget.highlightForeground": "#2979FF",
+        "editorWidget.border": "#2979FF",
+        "editorWidget.resizeBorder": "#2979FF",
+        "list.activeSelectionForeground": "#2979FF",
+        "list.highlightForeground": "#2979FF",
+        "list.inactiveSelectionForeground": "#2979FF",
+        "menu.selectionForeground": "#2979FF",
+        "menubar.selectionForeground": "#2979FF",
+        "notificationLink.foreground": "#2979FF",
+        "panelTitle.activeBorder": "#2979FF",
+        "pickerGroup.foreground": "#2979FF",
+        "progressBar.background": "#2979FF",
+        "scrollbarSlider.activeBackground": "#2979FF50",
+        "selection.background": "#2979FF40",
+        "settings.headerForeground": "#2979FF",
+        "settings.modifiedItemIndicator": "#2979FF",
+        "tab.activeBorder": "#2979FF",
+        "textLink.foreground": "#2979FF",
+        "titleBar.activeBackground": "#1F491D",
+        "titleBar.activeForeground": "#F5FBF5"
     },
-    "notebook.lineNumbers": "on",
-    "notebook.diff.ignoreOutputs": true,
-    "diffEditor.ignoreTrimWhitespace": false
+    "workbench.colorTheme": "Tinacious Design",
+    "workbench.editor.enablePreview": true,
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.editor.revealIfOpen": true,
+    "workbench.editor.tabSizing": "shrink",
+    "workbench.editor.wrapTabs": true,
+    "workbench.editorAssociations": {
+        "*.ipynb": "jupyter-notebook"
+    },
+    "workbench.iconTheme": "vscode-icons",
+    "workbench.settings.openDefaultKeybindings": true,
+    "workbench.statusBar.feedback.visible": false,
+    "workbench.tree.indent": 15
 }
