--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,6 @@
         "--rcfile=${workspaceFolder}/code/.pylintrc"
     ],
     "python.linting.pylintEnabled": true,
-    "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": false,
     "python.testing.unittestArgs": [
         "-v",
@@ -44,4 +43,29 @@
     ],
     "python.testing.unittestEnabled": false,
     "rewrap.wrappingColumn": 100,
+    "spellright.language": [
+        "en_US"
+    ],
+    "spellright.documentTypes": [
+        "markdown",
+        "latex",
+        "plaintext"
+    ],
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#acb5be",
+        "activityBar.activeBorder": "#bf4080",
+        "activityBar.background": "#acb5be",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#bf4080",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "statusBar.background": "#909ca7",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#748390",
+        "titleBar.activeBackground": "#909ca7",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#909ca799",
+        "titleBar.inactiveForeground": "#15202b99"
+    },
+    "peacock.color": "#909ca7",
 }
