Add some bash functions for disk space reporting

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -352,6 +352,7 @@
     "diffEditor.ignoreTrimWhitespace": false,
     "editor.copyWithSyntaxHighlighting": false,
     "editor.cursorSmoothCaretAnimation": true,
+    "editor.detectIndentation": false,
     "editor.fontLigatures": true,
     "editor.largeFileOptimizations": false,
     "editor.mouseWheelZoom": true,
@@ -520,7 +521,7 @@
     "vsicons.presets.jsonOfficial": true,
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
     "window.restoreWindows": "all",
-    "window.zoomLevel": 2,
+    "window.zoomLevel": 1,
     "workbench.activityBar.visible": true,
     "workbench.colorCustomizations": {
         "activityBar.activeBorder": "#2979FF",
@@ -554,6 +555,7 @@
     "workbench.editor.highlightModifiedTabs": true,
     "workbench.editor.revealIfOpen": true,
     "workbench.editor.tabSizing": "shrink",
+    "workbench.editor.untitled.hint": "hidden",
     "workbench.editor.wrapTabs": true,
     "workbench.editorAssociations": {
         "*.ipynb": "jupyter-notebook"
@@ -561,6 +563,5 @@
     "workbench.iconTheme": "eq-material-theme-icons-light",
     "workbench.settings.openDefaultKeybindings": true,
     "workbench.statusBar.feedback.visible": false,
-    "workbench.tree.indent": 15,
-    "editor.detectIndentation": false
+    "workbench.tree.indent": 15
 }
